--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
           <span class="close">&times;</span>
           <p>This website tracks the length since the cancellation of the show Infinity Train as well as previous hiatuses. <br> A hiatus is a time period starting from the end 
             of one announced schedule to the begining of another.
-            <br>This site is <b>not official</b> and is maintained by one person.<br>
-            <b>Some planned updates so far:</b> <br>
-            Mobile improvements</p>
+            <br>This site is <b>not official</b> and is maintained by one person.
         </div>
       </div>
       <button id="infoBtn">i</button>
