--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>The Silence of One-One - Infinity Train Hiatus Tracker</title>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Tracks the length since the cancellation of the Cartoon Network show
+    <meta name="description" content="Tracks the length since the cancellation of the Cartoon Network show,
     Infinity Train, as well as keeping a list previous hiatuses.">
 
     <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -12,7 +12,9 @@
     <script src="javascripts/script.js" defer></script>
     <script src="javascripts/modal.js" defer></script>
     <script src="javascripts/youtube.js" defer></script>
-    <script src="javascripts/jquery-3.6.0.min.js"></script>
+    <script src="javascripts/navbar.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <script>
 	    $(window).on("load", function() {
 	    	$("#loader").fadeOut("slow");;
@@ -43,14 +45,14 @@
       </div>
       <button id="infoBtn">i</button>
 
-      <div class="topnav">
-        <a class = "website" href="https://xman2156.github.io/arcane/">Arcane</a>
+      <div class="topnav" id="myTopnav">
         <a class = "website" href="https://xman2156.github.io/atla/">ATLA</a>
         <div class= "active dropdown">
           <button class="dropbtn">The Graveyard
             <i class="fa-solid fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
+            <a href="https://xman2156.github.io/arcane/">Arcane</a>
             <a href="https://xman2156.github.io/TOH/">The Owl House</a>
             <a href="https://xman2156.github.io/amphibia/">Amphibia</a>
             <a href="https://xman2156.github.io/spop/">She-Ra</a>
@@ -59,13 +61,6 @@
         </div>
         <a class = "report website" target="_blank" href="https://forms.gle/C1t69ZqwqxZVgEK79">Report a bug or ask a question</a>
       </div>
-
-      <!--<div class="alert">
-        <span class="closebtn">&times;</span>
-        <strong>INFO!</strong> I recently started 
-        <a target="_blank" href="https://twitter.com/AnimationHiatus">a Twitter page</a> 
-        to share updates about the sites and new projects.
-      </div>-->
 
       <div class="count">
         <h1>It has been</h1>
@@ -88,7 +83,6 @@
           <table id="hiatus"></table>
           <br>
         <hr class="spacer">
-
         </div>
 
         <div class="trailers">
@@ -101,20 +95,12 @@
 
         <div class="link">
           <h3>
-            You can find me on <a class="links" target="_blank" href="https://github.com/xman2156">GitHub</a> & <a class="links" target="_blank" href="https://twitter.com/AnimationHiatus">Twitter</a><br>
+            You can find me on <a class="links" target="_blank" href="https://github.com/xman2156">GitHub</a><br>
             <a class="links" target="_blank" href="https://github.com/TurtleByte/stevenhiatus/tree/gh-pages"> Credit to TurtleByte for original idea</a>
           </h3>
           <br>
         </div>
       </div>
     </div>
-    <script>
-      var close = document.getElementsByClassName("closebtn");
-        close[0].onclick = function(){
-          var div = this.parentElement;
-          div.style.opacity = "0";
-          setTimeout(function(){ div.style.display = "none"; }, 600);
-        }
-    </script>
   </body>
 </html>
